--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyperapp-modal",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "hyperapp.js modal",
   "main": "src/index.js",
   "scripts": {
@@ -16,8 +16,7 @@
     "alert"
   ],
   "peerDependencies": {
-    "hyperapp": "^0.12.0",
-    "picostyle": "0.1.5"
+    "hyperapp": "^0.16.0"
   },
   "author": "hongmomanu",
   "license": "ISC",
